# aerofoil

./: .gitignore  LICENSE  README.md  pyproject.toml
aerofoil/: main.py
aerofoil/commands/: clean_image.py  predict_image.py  train_hybrid.py  train_image.py
aerofoil/helpers/: conv3.py  image.py
aerofoil_datasets/: CITATIONS.bib  README.md  aerofoil_datasets_dataset_builder.py  bin.csv  bin.csv:Zone.Identifier  out.csv  sdf.csv
aerofoil_datasets_ori/: CITATIONS.bib  README.md  aerofoil_datasets_dataset_builder.py  aerofoil_datasets_dataset_builder_test.py  checksums.tsv
