[tool.poetry]
name = "aerofoil"
version = "0.1.0"
description = ""
authors = ["Arizal Akbar Zikri <akbarpn136@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = {version = "^2.14.1", extras = ["and-cuda"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
