[tool.poetry]
name = "aerofoil"
version = "0.1.0"
description = ""
authors = ["Arizal Akbar Zikri <akbarpn136@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = {version = "^2.14.1", extras = ["and-cuda"]}
typer = {extras = ["all"], version = "^0.9.0"}
tensorflow-datasets = "^4.9.3"
polars = "^0.20.0"
pandas = "^2.1.4"
jinja2 = "^3.1.2"
matplotlib = "^3.8.2"
pillow = "^10.1.0"
scikit-learn = "^1.3.2"

[tool.poetry.scripts]
aerofoil="aerofoil.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
